<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="3dp"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/playLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/orderTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="[00/00]" />

                <TextView
                    android:id="@+id/titleTextView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ellipsize="marquee"
                    android:gravity="center"
                    android:singleLine="true"
                    android:text="Need to marqee banner this is the Thing"
                    android:textSize="16sp" />
            </LinearLayout>

            <SurfaceView
                android:id="@+id/videoView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp" />

            <TextView
                android:id="@+id/subtitleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:lines="3"
                android:text=""
                android:textSize="11sp" />

            <SeekBar
                android:id="@+id/playAllSeekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/playAllTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="(0/1000)" />

                <TextView
                    android:id="@+id/autoTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="           " />
            </LinearLayout>

            <SeekBar
                android:id="@+id/playSeekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/playTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="(0/1000)" />

                <TextView
                    android:id="@+id/levelTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="단계  :" />

                <TextView
                    android:id="@+id/muteTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_weight="1"
                    android:text="" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/stopButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/stop" />

                <Button
                    android:id="@+id/prevButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:enabled="false"
                    android:text="@string/previous_button" />

                <Button
                    android:id="@+id/prevSecButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:enabled="false"
                    android:text="@string/previous_sec_button" />

                <Button
                    android:id="@+id/pauseButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="   Go!   " />

                <Button
                    android:id="@+id/nextSecButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:enabled="false"
                    android:text="+1" />

                <Button
                    android:id="@+id/nextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:enabled="false"
                    android:text=">" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/divideButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:text="@string/divide" />

                <Button
                    android:id="@+id/mergePrevButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:text="@string/merge_prev_button" />

                <Button
                    android:id="@+id/mergeNextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:text="@string/merge_next_button" />

                <Button
                    android:id="@+id/removeSubtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="자막삭제" />

                <Button
                    android:id="@+id/editSubtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="자막수정" />

                <Button
                    android:id="@+id/autoButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="true"
                    android:text="무음감지자동나누기"
                    android:visibility="gone" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/invalidButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="true"
                    android:text="학습제외" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="    무음감도     "
                        android:textSize="10sp" />

                    <SeekBar
                        android:id="@+id/muteSeekBar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center" />
                </LinearLayout>

                <Button
                    android:id="@+id/importButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TXT"
                    android:visibility="gone" />

                <Spinner
                    android:id="@+id/expSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center" />

                <Button
                    android:id="@+id/stopModeButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="true"
                    android:text="자동멈춤" />
            </LinearLayout>
        </LinearLayout>

        <include
            android:id="@+id/scoreboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            layout="@layout/scoreboard" />

        <LinearLayout
            android:id="@+id/meaningGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/chooseMeaning"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="첫문장선택" />

                <Button
                    android:id="@+id/removeMeaning"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="첫문장삭제" />

                <Button
                    android:id="@+id/editMeaning"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="첫문장수정" />

                <Button
                    android:id="@+id/removeAllMeaning"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="전체문장삭제" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </LinearLayout>

            <ListView
                android:id="@+id/meaningList"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>